--- a/dall3.html
+++ b/dall3.html
@@ -431,6 +431,7 @@
                 body: JSON.stringify({
                     prompt,
                     model: "dall-e-3",
+                    quality: "standard",
                     n: 1,
                     size: sizeSelect.value
                 })
